--- a/src/content/posts/toolfolio-a-collection-of-tools-for-designers.mdx
+++ b/src/content/posts/toolfolio-a-collection-of-tools-for-designers.mdx
@@ -4,14 +4,14 @@ summary: Toolfolio is a collection of tools for designers. It is a platform that
 mainImage: https://pub-f17d057acab94eff8169231fde6b2dd0.r2.dev/image%20(3).webp
 author:
   name: Muruganantham
-  username: jorgeassaf
+  username: murugan-d
   role: Frontend Developer
-  image: https://avatars.githubusercontent.com/jorgeassaf
+  image: https://avatars.githubusercontent.com/murugan
   links:
     - name: Twitter
       url: https://twitter.com/enriqueassaf
     - name: GitHub
-      url: https://github.com/jorgeassaf
+      url: https://github.com/muruganantham-d
 date: 2024-10-10
 categories:
   - Tools
